--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.Ungdomsuddannelser"
         tools:targetApi="31">
         <activity
+            android:name=".KunstActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SprogActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SamfundsvidenskabActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NaturvidenskabActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity_education"
             android:exported="false" />
         <activity
