--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,19 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Ungdomsuddannelser"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".HTXActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HFActivity"
+            android:exported="false" />
+        <activity
+            android:name=".HHXActivity"
+            android:exported="false" />
+        <activity
+            android:name=".STX_Activity"
+            android:exported="false" />
         <activity
             android:name=".KunstActivity"
             android:exported="false" />
@@ -34,7 +46,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
